fix: hover was not working because of footer image overlaping

--- a/styles/about.css
+++ b/styles/about.css
@@ -46,6 +46,8 @@ main h3 {
   margin-top: 10px;
   justify-content: center;
   width: 100%;
+  position: relative;
+  z-index: 100;
 }
 
 .btn-1 {
@@ -94,6 +96,8 @@ main h3 {
   height: auto;
   margin-top: 0px;
   margin-bottom: -10px;
+  position: relative;
+  z-index: 100;
 }
 
 footer {
